[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/scripts/Player.cs" type="Script" id=1]
[ext_resource path="res://addons/godot-vm-plugin/TerminalControl.cs" type="Script" id=2]
[ext_resource path="res://assets/scripts/HotCode.cs" type="Script" id=3]
[ext_resource path="res://assets/materials/textures/dot.png" type="Texture" id=4]
[ext_resource path="res://assets/models/interactive/Panel.gd" type="Script" id=5]
[ext_resource path="res://assets/images/selector-square-border.svg" type="Texture" id=6]
[ext_resource path="res://assets/images/017-right-arrow-2.svg" type="Texture" id=7]
[ext_resource path="res://assets/scripts/hints.gd" type="Script" id=8]

[sub_resource type="CylinderShape" id=1]
radius = 0.349346

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2978, 0 )

[node name="Camera" type="Camera" parent="RotationHelper"]
fov = 90.0

[node name="Flashlight" type="SpotLight" parent="RotationHelper/Camera"]
visible = false
light_specular = 0.1
shadow_enabled = true
spot_range = 37.0316
spot_angle = 66.9346

[node name="RayCast" type="RayCast" parent="RotationHelper/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerminalWrapper" type="Panel" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -367.0
margin_top = -242.0
margin_right = 367.0
margin_bottom = 242.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Terminal" type="Control" parent="GUI/TerminalWrapper"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HotCode1" type="Panel" parent="GUI"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -80.0
script = ExtResource( 3 )
Command = "echo 1 > /dev/per/Door/in"

[node name="Label" type="Label" parent="GUI/HotCode1"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Action
One"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pointer" type="TextureRect" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 4 )

[node name="hint_arrow" type="TextureRect" parent="GUI"]
margin_left = 23.3605
margin_top = 62.9524
margin_right = 121.361
margin_bottom = 160.952
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hint_rect" type="TextureRect" parent="GUI"]
margin_left = 19.0646
margin_top = 200.422
margin_right = 117.065
margin_bottom = 298.422
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}
